@@ -102,7 +102,7 @@ public class RenderResponseImpl implements RenderResponse {
 					});
 
 				return (PortletURL)constructor.newInstance(
-					new Object[] {this, new Boolean(action)});
+					new Object[] {this, Boolean.valueOf(action)});
 			}
 			catch (Exception e) {
 				_log.error(e);
