@@ -57,7 +57,7 @@ public class InputCheckBoxTag extends IncludeTag {
 	}
 
 	public void setDefaultValue(boolean defaultValue) {
-		_defaultValue = new Boolean(defaultValue);
+		_defaultValue = Boolean.valueOf(defaultValue);
 	}
 
 	public void setOnClick(String onClick) {
